--- a/.classpath
+++ b/.classpath
@@ -8,8 +8,7 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Immunity games/plugins/FriendSystem.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/Citizens (2).jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/PlayerVaults.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/Gadgets.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/Gadgets.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/AchievementSystem.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
@@ -20,9 +19,13 @@
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/Essentials-2.x-SNAPSHOT.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/SuperSpleef.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/Blackmarket.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Escapists/plugins/PrisonPunish.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/Spigot/spigot-1.8.8.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/Quests.jar"/>
 	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/Ancient.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/PlayerVaults (1).jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/LuckyBattle.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/PrisonPunish.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/HolographicDisplays.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Ben/Desktop/ALL DE STUFF/PitMc/plugins/ProjectStats.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
