--- a/plugin.yml
+++ b/plugin.yml
@@ -6,6 +6,8 @@ description: >
 commands:
   playermode:
     description: Staff Command
+  SecretSanta:
+    description: Give someone a secret santa
   reloadfiles:
     description: Staff Command
   setlocation:
@@ -47,5 +49,11 @@ commands:
   test3:
     description: Staff Command     
   givecorrupt:
-    description: Staff Command                                           
+    description: Staff Command
+  Convert:
+    description: Convert your tool to new format.    
+  Build:
+    description: Builder command  
+  pVanish:
+    description: Staff Command                                     
                                         
